Observable処理の実装

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -11,5 +11,5 @@
   </li>
 </ul>
 
-<!-- hero-detailを子コンポーネントとして呼び出し。selectedHeroプロパティをheroプロパティとしてバインドしている -->
+<!-- hero-detailを子コンポーネントとして呼び出し。selectedHeroプロパティをheroプロパティとしてバインド -->
 <app-hero-detail [hero]="selectedHero"></app-hero-detail>
