--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,8 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <!-- heroes配列からheroとしてfor文で繰り返す -->
-  <!-- 現在の行のヒーローがselectedHeroと同じならCSSクラスを追加 -->
-  <li
-    [class.selected]="hero === selectedHero"
-    *ngFor="let hero of heroes"
-    (click)="onSelect(hero)"
-  >
-    <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
   </li>
 </ul>
-
-<!-- hero-detailを子コンポーネントとして呼び出し。selectedHeroプロパティをheroプロパティとしてバインド -->
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
